--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,3 +5,9 @@
 .app-ring {
   @apply ring-1 ring-inset ring-primary-500 dark:ring-primary-400 focus:ring-2 focus:ring-primary-500 dark:focus:ring-primary-400;
 }
+
+@layer base {
+  html {
+    scroll-behavior: smooth;
+  }
+}
