--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@
   @apply ring-1 ring-inset ring-primary-500 dark:ring-primary-400 focus:ring-2 focus:ring-primary-500 dark:focus:ring-primary-400;
 }
 
-@theme {
+@theme static {
   /* See config: https://ui3.nuxt.dev/getting-started/theme#colors */
 
   --color-primary-50: var(--ui-color-primary-50);
